--- a/public/styles.css
+++ b/public/styles.css
@@ -13,15 +13,15 @@ h1 {
 }
 
 .container {
-  margin: 60% auto;
+  margin: auto;
 }
 
 button {
   display: inline-block;
   background-color: #6bbe92;
   border: 0;
-  width: 60px;
-  margin: 10px;
+
+  margin: auto;
   text-align: center;
   color: #fff;
   font-weight: bold;
